# shii

./: README.md  pyproject.toml  wsgi.py
dashboard/: app.py  precompute.py
dashboard/data/: roll_df.parquet
dashboard/static/css/: style.css
dashboard/static/js/: map.js
dashboard/templates/: index.html
deploy/: nginx-shii.conf  setup.sh  shii.service  update.sh
examples/: 311_ems_regression.ipynb  basic_figs.ipynb  compare_311_ems.ipynb  compare_311_ems_alldates.ipynb
src/shii/: _311.py  __init__.py  _data_helpers.py  _ems.py  _misc.py  _weather.py  _zones.py
