[project]
name = "shii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "geopandas>=1.1.2",
    "gunicorn>=25.3.0",
    "libpysal>=4.14.1",
    "matplotlib>=3.10.8",
    "meteostat>=2.1.3",
    "pandas>=3.0.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.0",
    "sodapy>=2.2.0",
    "spreg>=1.8.5",
]
